--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   auto_route: ^8.0.3
   internet_connection_checker: ^1.0.0+1
   http: ^1.2.1
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
   flutter_test:
@@ -19,6 +21,9 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   build_runner: ^2.4.9
   auto_route_generator: ^8.0.0
+  riverpod_generator: ^2.4.0
+  custom_lint: ^0.6.4
+  riverpod_lint: ^2.3.10
 
 flutter:
   uses-material-design: true
