--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   http: ^1.2.1
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
+  bot_toast: ^4.1.3
 
 dev_dependencies:
   flutter_test:
